fabric/testdata/out/ing_spp-perf-test-brand-service-get-api-brand-families-rl-service-stupssppbrandserviceloadtest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\",
      \"spp-brand-service.brands.read\") -\u003e clusterClientRatelimit(\"spp-perf-test-brand-service_api-brand-families_GET_stups_spp-brand-service-loadtest\",
      37000, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/brand-families\") \u0026\u0026 Method(\"GET\") \u0026\u0026 JWTPayloadAllKV(\"sub\",
      \"stups_spp-brand-service-loadtest\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"9936f518-b27d-4026-8b40-19228e2474b0","deployment-id":"d-obwi5hseno4by2atnnq3bsppj","pipeline-id":"l-2h6c8pup1xcoztczupk4ssdby"},"name":"spp-perf-test-brand-service-get-api-brand-families-rl-service-stupssppbrandserviceloadtest","namespace":"default"},"spec":{"rules":[{"host":"spp-perf-test-brand-service.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-perf-test-brand-service","servicePort":"http"},"pathType":"Im [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "spp-brand-service.brands.read") -> clusterClientRatelimit("spp-perf-test-brand-service_api-brand-families_GET_stups_spp-brand-service-loadtest",
      37000, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(4) && Path("/api/brand-families") && Method("GET")
      && JWTPayloadAllKV("sub", "stups_spp-brand-service-loadtest") && Header("X-Forwarded-Proto",
      "https")
  creationTimestamp: "2020-04-01T17:37:33Z"
  generation: 1
  labels:
    controller-uid: 9936f518-b27d-4026-8b40-19228e2474b0
    deployment-id: d-obwi5hseno4by2atnnq3bsppj
    pipeline-id: l-2h6c8pup1xcoztczupk4ssdby
  name: spp-perf-test-brand-service-get-api-brand-families-rl-service-stupssppbrandserviceloadtest
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-perf-test-brand-service
    uid: 9936f518-b27d-4026-8b40-19228e2474b0
  resourceVersion: "1357489250"
  uid: 2a1823c0-eb01-4e43-bfc2-2d491f7a1971
spec:
  rules:
  - host: spp-perf-test-brand-service.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-perf-test-brand-service
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
